# small-etl

./: .gitignore  API_CHAIN_EXAMPLE.md  Cargo.toml  LICENSE  README-LAMBDA.md  TOML_GUIDE.md  USAGE_EXAMPLES.md  build-lambda.bat  build-lambda.sh  etl-config.toml  sequence_metrics.json
configs/: dev-testing.toml  mvp-simple.toml  production-example.toml  sam.toml  sequence-example.toml  simple-api-chain-example.toml  simple-demo.toml  test_api_config.toml
docs/: REFACTORING.md  nested_field_mapping_tests.md
examples/: array_field_mapping_example.toml  nested_field_mapping_example.toml  payload_shared_key_example.toml
src/: lambda.rs  lib.rs  main.rs
src/adapters/: mod.rs
src/app/: mod.rs
src/app/pipelines/: mod.rs  mvp_pipeline.rs  sequence_pipeline.rs  simple_pipeline.rs
src/config/: cli.rs  lambda.rs  mod.rs  sequence_config.rs  toml_config.rs
src/core/: contextual_pipeline.rs  etl.rs  mod.rs  mvp_pipeline.rs  pipeline.rs  pipeline_sequence.rs
src/domain/: mod.rs  model.rs  ports.rs
src/domain/services/: etl_engine.rs  mod.rs
src/utils/: error.rs  logger.rs  mod.rs  monitor.rs  validation.rs
tests/: array_field_mapping_test.rs  auth_header_template_test.rs  auth_integration_test.rs  debug_auth_test.rs  field_filtering_test.rs  integration_tests.rs  nested_field_mapping_test.rs  sequence_integration_test.rs  simple_api_chain_test.rs  simple_payload_test.rs
