[package]
name = "samll-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
