[package]
name = "samll-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
async-trait = "0.1"

# Lambda dependencies (optional)
lambda_runtime = { version = "0.8", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["cli"]
cli = ["clap"]
lambda = ["lambda_runtime", "aws-sdk-s3", "aws-config", "tracing", "tracing-subscriber"]

[[bin]]
name = "lambda"
path = "src/lambda.rs"
required-features = ["lambda"]
